# OpenEEGBench

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  launch_all.py  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: changelog.yml  main.yml  publish.yml
benchmark_open_eeg/: objective.py
benchmark_open_eeg/datasets/: open_eeg.py
benchopt_wrappers/: README.md  config.yml  objective.py
benchopt_wrappers/datasets/: open_eeg.py
benchopt_wrappers/solvers/: finetune.py
docs/: advanced.md  backbones.md  benchopt.md  cluster.md  contributing.md  references.md
examples/: benchmark_builtin_backbone.py  benchmark_from_scratch.py  quick_start.py  run_on_slurm.py
open_eeg_bench/: __init__.py  backbone.py  backbone_utils.py  dataset.py  experiment.py  finetuning.py  head.py  helpers.py  main.py  normalization.py  ridge_probe.py  training.py
open_eeg_bench/default_configs/: __init__.py  backbones.py  datasets.py  experiments.py  finetuning.py  heads.py
scripts/: check_coverage.py  download_datasets.py  download_datasets.sh  example_run.py  run_coverage_on_cluster.py  run_experiment.py  run_on_cluster.py  run_sample_on_cluster.py  run_tuev_tuab_on_cluster.py
tests/: test_backbones.py  test_default_configs.py  test_heads_and_finetuning.py  test_normalization.py  test_ridge_probe.py
