[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-eeg-bench"
version = "0.1.0"
description = "Benchmarking parameter-efficient fine-tuning of EEG foundation models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "braindecode @ git+https://github.com/braindecode/braindecode.git",
    "peft>=0.14.0",
    "pydantic>=2.0",
    "torch>=2.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "skorch",
    "wandb",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_eeg_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
