[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-eeg-bench"
version = "0.1.0"
description = "Benchmarking parameter-efficient fine-tuning of EEG foundation models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}

dependencies = [
    "braindecode[hub]>=1.4.0",
    "exca>=0.5.10",
    "peft>=0.14.0",
    "pydantic>=2.0",
    "torch>=2.0",
    "numpy",
    "pandas",
    "scikit-learn>=1.6.0",
    "skorch",
    "wandb",
]

[project.optional-dependencies]
benchopt = [
    "benchopt>=1.9",
]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_eeg_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
