[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-eeg-bench"
version = "0.2.1"
description = "Benchmarking parameter-efficient fine-tuning of EEG foundation models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "braindecode[hub]>=1.4.0",
    "exca>=0.5.10",
    "peft>=0.14.0",
    "pydantic>=2.0",
    "torch>=2.0",
    "numpy",
    "pandas",
    "scikit-learn>=1.6.0",
    "skorch",
    "wandb",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/braindecode/OpenEEGBench"
Repository = "https://github.com/braindecode/OpenEEGBench.git"
Issues = "https://github.com/braindecode/OpenEEGBench/issues"
Changelog = "https://github.com/braindecode/OpenEEGBench/blob/master/CHANGELOG.md"

[project.optional-dependencies]
benchopt = ["benchopt>=1.9"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_eeg_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
